Added test if supcapabilities for 'MP_Combined_LogLike' or 'MP_LogLikes' are empty & throw error message. This can happen if there are syntax issues in the yaml file *or* if a scan without MP likelihoods is attempted but the function 'set_classy_input_with_MPLike' is choosen to satisfy capability 'classy_final_input'.

--- a/yaml_files/CosmoBit_quickStart.yaml
+++ b/yaml_files/CosmoBit_quickStart.yaml
@@ -209,6 +209,13 @@ ObsLikes:
     #  Pantheon: default
     #  Planck_SZ:
 
+  # print energy density of ncdm component 
+  # as derived by CLASS
+  - purpose:      Obs
+    capability:   Omega0_ncdm_tot
+    module:       CosmoBit
+    type:         double
+
 
 #======== 7) Rule entries ========
 Rules:
