--- a/yaml_files/polychord_fast_slow.yaml
+++ b/yaml_files/polychord_fast_slow.yaml
@@ -9,9 +9,9 @@
 
 #======== Input parameter declarations =======
 Parameters:
- 
+
   # --- import model parameters for models to scan over ---
-  LCDM: 
+  LCDM:
     omega_b:
       prior_type: flat
       range: [0.020,0.024]
@@ -167,7 +167,7 @@ Scanner:
       like:  LogLike
       nlive: 150
       tol: 0.1
-      fast_params: 
+      fast_params:
         - cosmo_nuisance_Planck_TTTEEE::A_cib_217
         - cosmo_nuisance_Planck_TTTEEE::A_planck
         - cosmo_nuisance_Planck_TTTEEE::A_pol
@@ -219,11 +219,11 @@ ObsLikes:
   - purpose:      LogLike
     capability:   Planck_lowl_loglike
     function:     function_Planck_lowl_TTEE_2018_loglike
- 
+
   - purpose:      LogLike
     capability:   Planck_lensing_loglike
     function:     function_Planck_lensing_2018_loglike
- 
+
 #======== Rule entries ========
 Rules:
 
@@ -250,7 +250,7 @@ Rules:
 
   - capability: BBN_abundances
     options:
-      elements: [Yp, D, He3, Be7, Li7]
+      isotope_basis: [Yp, D, He3, Be7, Li7]
       correlation_matrix: [[+1.000e00, +1.524e-2, +2.667e-2, +2.303e-2, +2.429e-2],
                            [+1.524e-2, +1.000e00, -8.160e-1, -3.775e-1, -3.653e-1],
                            [+2.667e-2, -8.160e-1, +1.000e00, +3.897e-1, +3.780e-1],
