Updated assorted YAML files to use new inflationary model setup 	modified:   yaml_files/CosmoBit_ALP.yaml 	modified:   yaml_files/CosmoBit_exoClass.yaml 	modified:   yaml_files/CosmoBit_inflationTest.yaml 	modified:   yaml_files/CosmoBit_quickStart.yaml 	modified:   yaml_files/CosmoBit_testALP.yaml 	modified:   yaml_files/CosmoBit_testCosmo.yaml 	modified:   yaml_files/CosmoBit_testMP.yaml 	modified:   yaml_files/CosmoBit_tutorial.yaml 	modified:   yaml_files/include/LCDM_scan.yaml

--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -8,6 +8,14 @@ Parameters:
 
   LCDM: !import include/LCDM_scan.yaml
 
+  PowerLaw_ps:
+    ln10A_s:
+      prior_type: flat
+      range: [2.9,3.2]
+    n_s:
+      prior_type: flat
+      range: [0.9,1.10]
+
   CosmoALP:
     fa: 1.0
     ma0:
