--- a/yaml_files/CosmoBit_quickStart.yaml
+++ b/yaml_files/CosmoBit_quickStart.yaml
@@ -76,16 +76,19 @@ Parameters:
     H0:
       prior_type: flat
       range: [62,74]
+    tau_reio:
+      prior_type: flat
+      range: [0.004,0.20]
+    T_cmb: 2.72548
+
+  # base-line power-law power spectrum and priors
+  PowerLaw_ps:
     ln10A_s:
       prior_type: flat
       range: [2.9,3.2]
     n_s:
       prior_type: flat
       range: [0.9,1.10]
-    tau_reio:
-      prior_type: flat
-      range: [0.004,0.20]
-    T_cmb: 2.72548
 
   # extension of standard LCDM: allow for values of dNeff @CMB & @ BBN different from today
   dNurBBN_dNurCMB:
