--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -98,12 +98,6 @@ Parameters:
    H0:
      prior_type: flat
      range: [62,74]
-   ln10A_s:
-     prior_type: flat
-     range: [2.9,3.2]
-   n_s:
-     prior_type: flat
-     range: [0.9,1.10]
    tau_reio:
      prior_type: flat
      range: [0.004,0.20]
@@ -120,42 +114,45 @@ Parameters:
  #   100theta_s:
  #     prior_type: flat
  #     range: [1.03955,1.04265]
- #   ln10A_s:
- #     prior_type: flat
- #     range: [2.9,3.2]
- #   n_s:
- #     prior_type: flat
- #     range: [0.9,1.10]
  #   tau_reio:
  #     prior_type: flat
  #     range: [0.004,0.20]
  #   T_cmb: 2.72548
 
- # extension of standard LCDM: allow for a value of dNeff @ CMB release different from today
- #dNurCMB:
- # dNur_CMB: 0.01
+  # base-line power-law power spectrum and priors
+  PowerLaw_ps:
+    ln10A_s:
+      prior_type: flat
+      range: [2.9,3.2]
+    n_s:
+      prior_type: flat
+      range: [0.9,1.10]
 
- #etaBBN_rBBN_rCMB_dNurBBN_dNurCMB:
- #  eta_BBN: 1e-8
- #  r_BBN: 1
- #  r_CMB: 1
- #  dNur_CMB: 0.
- #  dNur_BBN: 0.
+  # extension of standard LCDM: allow for a value of dNeff @ CMB release different from today
+  #dNurCMB:
+  # dNur_CMB: 0.01
 
- # nuisance parameters for Planck likelihood
- #  => if you don't include the Planck likelihoods into the scan you should get a FATAL Error
- #     telling you that no function requires any of the model parameters, comment this line out
- #     to fix it
- # (try to comment this line or the Planck likelihoods then you can see the different error messages)
- cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
+  #etaBBN_rBBN_rCMB_dNurBBN_dNurCMB:
+  #  eta_BBN: 1e-8
+  #  r_BBN: 1
+  #  r_CMB: 1
+  #  dNur_CMB: 0.
+  #  dNur_BBN: 0.
 
- # Include this if you use the Pantheon SNe likelihood into your scan
- # IMPORTANT Note: since this is a MontePython likelihood GAMBIT won't complain if you forgot to include
- #  this model and try to use the Pantheon likelihood. You will however, get a runtime error saying
- #         >> GAMBIT has exited with fatal exception: KeyError: ('M',)
- #  (MP is looking for the nuisance parameter M (absoulute magnitude of SNeIa) but can't
- #  find it in the passed parameter dictionary). I do have to fix this, it is on the list.. sorry for that!
- cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
+  # nuisance parameters for Planck likelihood
+  #  => if you don't include the Planck likelihoods into the scan you should get a FATAL Error
+  #     telling you that no function requires any of the model parameters, comment this line out
+  #     to fix it
+  # (try to comment this line or the Planck likelihoods then you can see the different error messages)
+  cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
+
+  # Include this if you use the Pantheon SNe likelihood into your scan
+  # IMPORTANT Note: since this is a MontePython likelihood GAMBIT won't complain if you forgot to include
+  #  this model and try to use the Pantheon likelihood. You will however, get a runtime error saying
+  #         >> GAMBIT has exited with fatal exception: KeyError: ('M',)
+  #  (MP is looking for the nuisance parameter M (absoulute magnitude of SNeIa) but can't
+  #  find it in the passed parameter dictionary). I do have to fix this, it is on the list.. sorry for that!
+  cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
 
 
 #======== Prior setup ========
